fixed bug with carousel jumping images down and header alignment

--- a/style.css
+++ b/style.css
@@ -6,8 +6,41 @@ body {
   background-color: #7cbbffa4;
   color: rgb(70, 67, 67);
 }
+header {
+  display: flex;
+  /* width: 100%; */
+  align-items: center;
+  justify-content: space-between;
+  /* justify-content: ; */
+}
+header .initial {
+  justify-content: flex-start;
+  text-align: center;
+  margin: 20px;
+  padding: 5px;
+  font-size: 30px;
+  background-color: pink;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.menu {
+  justify-content: flex-end;
+}
+.hamburger {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+    color: black;
+    justify-content: flex-end;
+}
+.hamburger:hover{
+    color: rgba(70, 67, 67, 0.205);
+}
 .top_nav {
   text-align: right;
+  /* justify-content: flex-end; */
 }
 .top_nav a {
   color: rgb(70, 67, 67);
@@ -30,34 +63,7 @@ body {
     /* background-color: white; */
     
 }
-header {
-  display: inline-flex;
-  width: 100%;
-  align-items: center;
-}
-header .initial {
-  justify-content: flex-start;
-  text-align: center;
-  margin: 20px;
-  padding: 5px;
-  font-size: 30px;
-  background-color: pink;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
 
-}
-.hamburger {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 10px;
-    color: black;
-    justify-content: flex-end;
-}
-.hamburger:hover{
-    color: rgba(70, 67, 67, 0.205);
-}
 .welcome::first-letter {
   font-size: 50px;
 }
@@ -142,24 +148,24 @@ header .initial {
 } */
 .projectPic {
   /* height: 200px; */
-  position: relative;
-  width: 30%;
+  /* position: relative; */
 }
 .carousel-item {
-  width: 50%;
-  align-items: center;
-  position: relative;
+  /* width: 50%; */
+  /* position: relative;
+  margin: 0 auto; */
+  padding-bottom: 20px;
 }
 .carousel-inner {
-  align-items: center;
+  /* align-items: center;
   justify-content: center;
-  align-content: center;
+  align-content: center; */
 }
 
 .projectText {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
+  bottom: 50px;
+  right: 50px;
   background-color: grey;
   color: white;
   padding-left: 20px;
@@ -168,6 +174,7 @@ header .initial {
   font-size: 20px;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 form {
   display: grid;
